argocd/applications/bilig/zero-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bilig-zero-strip-prefix
  namespace: bilig
spec:
  stripPrefix:
    prefixes:
      - /zero
