argocd/applications/bilig/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bilig-web
  namespace: bilig
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bilig-web
  template:
    metadata:
      labels:
        app: bilig-web
    spec:
      containers:
        - name: bilig-web
          image: registry.ide-newton.ts.net/lab/bilig-web
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
