argocd/applications/bilig/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bilig-app
  namespace: bilig
spec:
  selector:
    app: bilig-app
  ports:
    - name: http
      port: 80
      targetPort: 4321
