argocd/applications/bilig/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bilig-web
  namespace: bilig
spec:
  selector:
    app: bilig-web
  ports:
    - port: 80
      targetPort: 3000
