argocd/applications/bilig/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bilig-redis
  namespace: bilig
spec:
  selector:
    app: bilig-redis
  ports:
    - port: 6379
      targetPort: 6379
