argocd/applications/bilig/zero-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bilig-zero
  namespace: bilig
spec:
  selector:
    app: bilig-zero
  ports:
    - name: http
      port: 80
      targetPort: 4848
